vaccs_pin_cpp/libs/util/out
Compiling general.cpp
In file included from general.cpp:19:0:
../util/general.h:204:1: error: ‘e’ does not name a type
 e
 ^
In file included from /home/carr/vaccs/dynamic_analysis/pin/extras/stlport/include/string:33:0,
                 from /home/carr/vaccs/dynamic_analysis/pin/source/include/pin/level_base.PLH:81,
                 from /home/carr/vaccs/dynamic_analysis/pin/source/include/pin/pin.H:43,
                 from general.cpp:21:
/home/carr/vaccs/dynamic_analysis/pin/extras/stlport/include/stl/_string_hash.h:46:8: error: ‘hash’ is not a class template
 struct hash<basic_string<_CharT,_Traits,_Alloc> > {
        ^~~~
Makefile:52: recipe for target 'general.o' failed
make: *** [general.o] Error 1
